# GraphRAG_FSI_Project_Repo

./: .env.example  README.md  main.py  pyproject.toml
data/vector_store/: chroma.sqlite3
notebook/Graph_RAG/: graphRAG.ipynb
notebook/Test_RAG/: lab_document.ipynb  lab_traditional_rag_ref.ipynb
