[project]
name = "ai-projects-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "groq>=0.37.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "llama-parse>=0.6.94",
    "neo4j>=6.1.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "typesense>=2.0.0",
]
